2023-09-16T00:39:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6204157453 # 1164
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-16
* notice: last 14d: unq all: 3 21
* notice: prev accum: outdated-unq outdated-all / unq all: 619 981 / 637 1005
* notice: next accum: outdated-unq outdated-all / unq all: 621 984 / 637 1005
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2023-09-01] / []

2023-09-15T08:11:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6195582073 # 1162
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 3 22
* notice: prev accum: outdated-unq outdated-all / unq all: 619 981 / 636 1004
* notice: next accum: outdated-unq outdated-all / unq all: 619 981 / 637 1005
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-09-01 2023-09-15]

2023-09-15T00:41:04Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6192429036 # 1161
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: last 14d: unq all: 3 22
* notice: prev accum: outdated-unq outdated-all / unq all: 613 972 / 633 1001
* notice: next accum: outdated-unq outdated-all / unq all: 619 981 / 636 1004
* notice: prev exec diff / last date diff / accum: unq all: +3 +3 -1 -1 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2023-08-27 2023-08-28 2023-08-29 2023-08-30 2023-08-31] / [2023-09-01 2023-09-11 2023-09-13]
