@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-09-16T00:39:51Z",
-  "count_outdated" : 984,
-  "uniques_outdated" : 621,
+  "timestamp" : "2023-09-16T08:10:17Z",
+  "count_outdated" : 985,
+  "uniques_outdated" : 622,
   "count" : 1005,
   "uniques" : 637,
   "clones" : [
-    {
-      "timestamp": "2023-09-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-09-03T00:00:00Z",
       "count": 2,
